# PandoraLauncher

./: Cargo.toml  README.md
.github/workflows/: build.yml  cd.yml
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_filesystem.rs  backend_handler.rs  directories.rs  install_content.rs  instance.rs  launch.rs  lib.rs  log_reader.rs  mod_metadata.rs  persistent.rs  syncing.rs
crates/backend/src/metadata/: items.rs  manager.rs  mod.rs
crates/bridge/src/: handle.rs  install.rs  instance.rs  keep_alive.rs  lib.rs  message.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: interface_config.rs  lib.rs  processor.rs  root.rs  ui.rs
crates/frontend/src/component/: content_list.rs  instance_dropdown.rs  instance_list.rs  mod.rs
crates/frontend/src/entity/: instance.rs  mod.rs
crates/frontend/src/game_output/: mod.rs
crates/frontend/src/modals/: delete_instance.rs  generic.rs  modrinth_install.rs
crates/frontend/src/pages/: instances_page.rs  modrinth_page.rs  syncing_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  logs_subpage.rs  mod.rs  mods_subpage.rs  resource_packs_subpage.rs  settings_subpage.rs
crates/pandora_launcher/src/: main.rs
crates/schema/src/: backend_config.rs  forge.rs  instance.rs  lib.rs  maven.rs  modrinth.rs  resourcepack.rs  syncing.rs  version.rs
package/: com.moulberry.PandoraLauncher.metainfo.xml
scripts/: build_linux.sh
wrapper/com/moulberry/pandora/: LaunchWrapper.java
