[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
auth.workspace = true
tokio.workspace = true
serde.workspace = true
sha1.workspace = true
ustr.workspace = true
schema.workspace = true
nbt.workspace = true
quick-xml.workspace = true
bridge.workspace = true
chrono.workspace = true
hex.workspace = true
futures.workspace = true
regex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
os_info.workspace = true
anyhow.workspace = true
serde_json.workspace = true
flate2.workspace = true
slab.workspace = true
notify.workspace = true
sanitize-filename.workspace = true
notify-debouncer-full.workspace = true
base64.workspace = true
uuid.workspace = true
xmlparser.workspace = true
image.workspace = true
mini-moka.workspace = true
rustc-hash.workspace = true
lexical-sort.workspace = true
indexmap.workspace = true
serde_with.workspace = true
once_cell.workspace = true
tokio-util.workspace = true
parking_lot.workspace = true
lzma-rs.workspace = true
enum-map.workspace = true
enumset.workspace = true
strum.workspace = true
rand.workspace = true
rayon.workspace = true
rc-zip-sync.workspace = true
relative-path.workspace = true
shell-words.workspace = true
serde-xml-rs.workspace = true
memchr.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
junction = "1.3.0"
